--- a/package.json
+++ b/package.json
@@ -55,6 +55,7 @@
     "next": "15.2.4",
     "next-intl": "^4.0.2",
     "next-themes": "latest",
+    "qrcode.react": "^4.2.0",
     "react": "^18.3.1",
     "react-day-picker": "8.10.1",
     "react-dom": "^18.3.1",
